[Translation] Translate Youth council 2015 session

--- a/locales/ara/translation.json
+++ b/locales/ara/translation.json
@@ -16,5 +16,18 @@
     "french":"French",
     "english":"English",
     "test":"Test"
+  },
+  "youthcouncil2015":{
+    "pfblockTitle":"What is our project about",
+    "pfblockSubtitle":"Local youth councils are forums that represent the views of young people at a local level. Run by young people for young people, they give young people a voice and enable them to make their views heard in the decision-making process. They give young people the chance to discuss relevant issues, engage with decision makers and contribute to improving the lives of young people within their communities. ",
+    "iconboxDesc1":"Choose your town and join a motivated team...",
+    "iconboxTitle2":"6 Local youth councils",
+    "iconboxDesc2":"The 6 Local youth councils are: Cite El-Riadh, Kalaa Kebira, Ksibet Mediouni, M'Saken, Hammam sousse and Sousse.",
+    "iconboxTitle2":"Future projects and ideas",
+    "iconboxDesc3":"We have at least 1 project in each town.",
+    "iconboxTitle3":"Training and Workshops",
+    "iconboxDesc3":"the workshops are ...",
+    "iconboxTitle4":"Agenda",
+    "iconboxDesc4":"We have at least 1 project in each town.The project starts march 2015 ..."
   }
 }
