--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -1,8 +1,8 @@
-{ 
-  "home":{
-    "start":"XXXX",
-    "joinUs":"XXXX",
-    "startDescription":"XXXX"
+{
+  "home": {
+    "start": "XXXX",
+    "joinUs": "XXXX",
+    "startDescription": "XXXX"
   },
   "nav": {
     "home": "XXXX",
@@ -17,17 +17,52 @@
     "english": "XXXX",
     "test": "XXXX"
   },
-  "youthcouncil2015":{
-    "pfblockTitle":"XXXX",
-    "pfblockSubtitle":"XXXX",
-    "iconboxDesc1":"XXXX",
-    "iconboxTitle2":"XXXX",
-    "iconboxDesc2":"XXXX",
-    "iconboxTitle2":"XXXX",
-    "iconboxDesc3":"XXXX",
-    "iconboxTitle3":"XXXX",
-    "iconboxDesc3":"XXXX",
-    "iconboxTitle4":"XXXX",
-    "iconboxDesc4":"XXXX"
+  "youthcouncil2015": {
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "iconboxDesc1": "XXXX",
+    "iconboxTitle2": "XXXX",
+    "iconboxDesc2": "XXXX",
+    "iconboxDesc3": "XXXX",
+    "iconboxTitle3": "XXXX",
+    "iconboxTitle4": "XXXX",
+    "iconboxDesc4": "XXXX"
+  },
+  "youthcouncil2013": {
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "figCaptionTitle11": "XXXX",
+    "figCaptionTitle12": "XXXX",
+    "figCaptionDescription1": "XXXX",
+    "figCaptionTitle21": "XXXX",
+    "figCaptionTitle22": "XXXX",
+    "figCaptionDescription2": "XXXX",
+    "figCaptionTitle31": "XXXX",
+    "figCaptionTitle32": "XXXX",
+    "figCaptionDescription3": "XXXX",
+    "figCaptionTitle41": "XXXX",
+    "figCaptionTitle42": "XXXX",
+    "figCaptionDescription4": "XXXX",
+    "figCaptionTitle51": "XXXX",
+    "figCaptionTitle52": "XXXX",
+    "figCaptionDescription5": "XXXX",
+    "figCaptionTitle61": "XXXX",
+    "figCaptionTitle62": "XXXX",
+    "figCaptionDescription6": "XXXX"
+  },
+  "team":{
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "textCenter1": "XXXX",
+    "textCenter2": "XXXX",
+    "textCenter3": "XXXX",
+    "textCenter4": "XXXX",
+    "textCenter5": "XXXX",
+    "textCenter6": "XXXX",
+    "textCenter7": "XXXX"
+  },
+  "action":{
+    "readyToJoin":"XXXX",
+    "joinDescription":"XXXX"
   }
 }
