Fix translation bugs

--- a/locales/eng/translation.json
+++ b/locales/eng/translation.json
@@ -21,14 +21,14 @@
     "pfblockTitle":"What is our project about",
     "pfblockSubtitle":"Local youth councils are forums that represent the views of young people at a local level. Run by young people for young people, they give young people a voice and enable them to make their views heard in the decision-making process. They give young people the chance to discuss relevant issues, engage with decision makers and contribute to improving the lives of young people within their communities. ",
     "iconboxDesc1":"Choose your town and join a motivated team...",
-    "iconboxTitle2":"6 Local youth councils",
-    "iconboxDesc2":"The 6 Local youth councils are: Cite El-Riadh, Kalaa Kebira, Ksibet Mediouni, M'Saken, Hammam sousse and Sousse.",
+    "iconboxTitle1":"7 Local youth councils",
+    "iconboxDesc2":"The 7 Local youth councils are: Cite El-Riadh, Kalaa Kebira, Ksibet Mediouni, M'Saken, Hammam sousse and Sousse.",
     "iconboxTitle2":"Future projects and ideas",
     "iconboxDesc3":"We have at least 1 project in each town.",
     "iconboxTitle3":"Training and Workshops",
-    "iconboxDesc3":"The workshops are ...",
-    "iconboxTitle4":"Agenda",
-    "iconboxDesc4":"We have at least 1 project in each town.The project starts march 2015 ..."
+    "iconboxDesc4":"the workshops are ...",
+    "iconboxTitle4":"Project calendar",
+    "iconboxDesc5":"Click here to check out our calendar"
   },
   "youthcouncil2013":{
     "pfblockTitle":"Projects 2013",
@@ -43,13 +43,13 @@
     "figCaptionTitle32":"Competition.",
     "figCaptionDescription3":"with art tell us how you want Tunisia will be.",
     "figCaptionTitle41":"Study",
-    "figCaptionTitle42":"The workshops are ...",
+    "figCaptionTitle42":"trip",
     "figCaptionDescription4":"The most active members went to a study trip to Krakow in Poland.",
     "figCaptionTitle51":"Newspapers",
     "figCaptionTitle52":"& Guide book",
     "figCaptionDescription5":"Newspapers talk about our activities.",
     "figCaptionTitle61":"Memebers",
-    "figCaptionTitle62":"XXXXX",
+    "figCaptionTitle62":"2013",
     "figCaptionDescription6":"The youth council team of 2013."
   },
   "team":{
