--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -28,7 +28,9 @@
     "iconboxTitle3":"XXXX",
     "iconboxDesc4":"XXXX",
     "iconboxTitle4":"XXXX",
-    "iconboxDesc5":"XXXX"
+    "iconboxDesc5":"XXXX",
+    "readMore":"XXXX",
+    "download":"XXXX"
   },
   "youthcouncil2013": {
     "pfblockTitle": "XXXX",
