--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -28,7 +28,9 @@
     "iconboxTitle3":"Training and Workshops",
     "iconboxDesc4":"the workshops are ...",
     "iconboxTitle4":"Project calendar",
-    "iconboxDesc5":"Click here to check out our calendar"
+    "iconboxDesc5":"Click here to check out our calendar",
+    "readMore":"Read more!",
+    "download":"Download"
   },
   "youthcouncil2013":{
     "pfblockTitle":"Projects 2013",
