Add content to the index page and change the pictures

--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -24,9 +24,9 @@
     "iconboxTitle1":"7 Local youth councils",
     "iconboxDesc2":"The 7 Local youth councils are: Cite El-Riadh, Kalaa Kebira, Ksibet Mediouni, M'Saken, Hammam sousse and Sousse.",
     "iconboxTitle2":"Future projects and ideas",
-    "iconboxDesc3":"We have at least 1 project in each town.",
+    "iconboxDesc3":"Des mini-projets novateurs et adaptés à la situation et les problèmes des jeunes dans les 5 villes du projet.",
     "iconboxTitle3":"Training and Workshops",
-    "iconboxDesc4":"the workshops are ...",
+    "iconboxDesc4":"Un cours de formation de 3 jours pour les membres du conseil de la jeunesse par des spécialistes en la démocratie locale et le développement durable.",
     "iconboxTitle4":"Project calendar",
     "iconboxDesc5":"Click here to check out our calendar",
     "readMore":"Read more!",
@@ -43,7 +43,7 @@
     "figCaptionDescription2":"5 mini projects! Each youth council did a mini project.",
     "figCaptionTitle31":"Art",
     "figCaptionTitle32":"Competition.",
-    "figCaptionDescription3":"with art tell us how you want Tunisia will be.",
+    "figCaptionDescription3":"Les jeunes de 5 conseils des jeunes imaginent l'avenir de leur ville et le présentent d'une manière artistique",
     "figCaptionTitle41":"Study",
     "figCaptionTitle42":"trip",
     "figCaptionDescription4":"The most active members went to a study trip to Krakow in Poland.",
@@ -72,9 +72,9 @@
   "partners":{
     "pfblockTitle":"Youth council 2015 partners",
     "pfblockSubtitle":"grâce à eux...",
-    "blockQuote1":"Eurêka is an organisation...",
+    "blockQuote1":"Eureka was among the first cultural NGOs created in Tunisia after the revolution of 2011. It was an idea to raise awareness of engineering students to cultural and social causes. Eureka lead a lot of projects and the most successful is Youth council",
     "footer1":"Eurêka",
-    "blockQuote2":"We love Sousse is an organisation",
+    "blockQuote2":"« We love Sousse » est une association qui a été créé en juin 2011 portant l’espoir d’améliorer la qualité de vie dans la ville de Sousse. Dès sa création elle a développé des liens étroits avec les différents acteurs associatif et institutionnels de la région ce qui lui a permis une place privilégié et un label de sérieu assez confirmé. WLS coordonne un réseau de 80 associations tunisiennes et travaille étroitement avec les chefs de files des autres 41 pays membres représentant un espace dépassant les 4500 associations et institutions travaillant dans plusieurs domaines.",
     "footer2":"We love Sousse",
     "blockQuote3":"Mila is an organisation",
     "footer3":"Mila"
