Add some content to the youthcouncil 2013 page

--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -60,6 +60,7 @@
     "projects":"Minin Projects 2013",
     "studyTrip":"Study trip 2013",
     "guideBook":"Guide book",
+    "guideBookDescription":"A special guidebook describing all of the important things to know about local sustainable development, created especially for the Tunisian (youth) audience.",
     "firtEdition":"First Edition, click to download",
     "secondEdition":"Second Editon, click to download",
     "thirdEdition":"Third Edition, click to download"
