Add pictures for the training 2015, design youthcouncil2015, fix facebook link

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -32,7 +32,9 @@
         "iconboxTitle4": "XXXX",
         "iconboxDesc5": "XXXX",
         "readMore": "XXXX",
-        "download": "XXXX"
+        "download": "XXXX",
+        "training2015": "youthcouncil2015.training2015",
+        "figCaptionDescription1": "youthcouncil2015.figCaptionDescription1"
     },
     "youthcouncil2013": {
         "pfblockTitle": "XXXX",
