Add description for mini projects 2015

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -32,7 +32,16 @@
         "iconboxTitle4": "XXXX",
         "iconboxDesc5": "XXXX",
         "readMore": "XXXX",
-        "download": "XXXX"
+        "download": "XXXX",
+        "training2015": "XXXX",
+        "trainingDescription": "XXXX",
+        "projectErriadh": "XXXX",
+        "projectKK": "XXXX",
+        "projectHS": "XXXX",
+        "projectSousse": "XXXX",
+        "projectMonastir": "XXXX",
+        "projectKM": "XXXX",
+        "projectMsaken": "XXXX"
     },
     "youthcouncil2013": {
         "pfblockTitle": "XXXX",
@@ -75,6 +84,13 @@
         "textCenter5": "XXXX",
         "textCenter6": "XXXX",
         "textCenter7": "XXXX",
+        "erriadhYC": "XXXX",
+        "hsYC": "XXXX",
+        "kkYC": "XXXX",
+        "kmYC": "XXXX",
+        "monastirYC": "XXXX",
+        "msakenYM": "XXXX",
+        "sousseYC": "XXXX",
         "coordinatorErriadh": "XXXX",
         "erriadhDescription": "XXXX",
         "coordinatorErriadhDescription": "XXXX",
@@ -90,12 +106,13 @@
         "coordinatorMsaken": "XXXX",
         "msakenDescription": "XXXX",
         "coordinatorMsakenDescription": "XXXX",
-        "coordinatorKM":"Aymen Ben Romdhane",
-        "kmDescription":"XXXX",
-        "coordinatorKMDescription":"XXXX",
-        "coordinatorMonastir":"XXXX",
-        "monastirDescritpion":"XXXX",
-        "coordinatorMonastirDescription":"XXXX"
+        "coordinatorKM": "Aymen Ben Romdhane",
+        "kmDescription": "XXXX",
+        "coordinatorKMDescription": "XXXX",
+        "coordinatorMonastir": "XXXX",
+        "monastirDescritpion": "XXXX",
+        "coordinatorMonastirDescription": "XXXX",
+        "msakenYC": "team.msakenYC"
     },
     "action": {
         "readyToJoin": "XXXX",
