--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -32,7 +32,16 @@
     "iconboxTitle4":"Project calendar",
     "iconboxDesc5":"Click here to check out our calendar",
     "readMore":"Read more!",
-    "download":"Download"
+    "download":"Download",
+    "training2015":"Training & Workshops 2015",
+    "trainingDescription":"The training for youth leaders was held in Kelibia on 19th – 21st June – as part of the ‘Youth Councils in Tunisia’ project. The training was addressed to youth leadres representing Youth Councils from seven localities in Tunisia: Sousse, Hammama Sousse, Monastir, M’saken, Kalaa Kebira, Hay Riadh i Kisbet el Madyouni and it was carried out by Polish trainers from Foundation of Active People and Places. It was focused on how to introduce participative democratic mechanism to everyday practice of local municipalities as well as development of knowledge and skills usefull in being an active member in Youth Council.  The important experience for participants was Oxford debate on thesis ‘Youth Councils could be a serious partner in the dialogue with local government’ as it evoked plenty of discussions and emotions. The additional value of the training was the opportunity for exchange information and experiences among representatives of seven Youth Councils and integration. The training is an action of the ‘Youth Councils in Tunisia’ project, cofinanced by the Polish development cooperation programme of the Ministry of Foreign Affairs of the Republic of Poland . Program ‘Support for Democracy’, implemented by Polish Foundation of Active People and Places (MiLA) and Tunisian Associations EUREKA and ‘We Love Sousse’.",
+    "projectErriadh":"L’idée de ce projet est d’aménager le terrain de sport situé à Cité Riadh. Cela fait des années que le terrain est dans un piteux état. Pourtant, beaucoup de jeunes s’y retrouvent pour taper la balle et s’amuser. Entretenir ce terrain va donner un espoir aux jeunes et va leur offrir une occasion pour améliorer leurs talent. Au cours de ce projet, on va entretenir le terrain en faisant le traçage des lignes et en installant des cages. On va nettoyer l’entourage du terrain et peindre la clôture et la décorer avec des graffités. Après avoir achevé cette partie du projet, on va organiser des tournois pour les jeunes des deux sexes pour les encourager à faire du sport et surtout pour encourager les sports féminins.",
+    "projectKK":"The train station of Kalaa Kebira is not well equiped and that is why Youth Council takes the initiative to equip the train station and embellish it because it gives service for more than 1600 people per month, 1600 passengers wait for the train without canvas protect him of sun in summer and of rain in winter, nothing to do when they are waiting for the train and no light by night and no trash can. We  start with painting and decorating the train station in the traditionnel style.",
+    "projectHS":"",
+    "projectSousse":"",
+    "projectMonastir":"",
+    "projectKM":"",
+    "projectMsaken":""
   },
   "youthcouncil2013":{
     "pfblockTitle":"Projects 2013",
@@ -75,6 +84,13 @@
     "textCenter5":"Monastir",
     "textCenter6":"M'Saken",
     "textCenter7":"Sousse",
+    "erriadhYC":"Youth council Erriadh",
+    "hsYC":"Youth council Hammam Sousse",
+    "kkYC":"Youth council Kalaa Kebira",
+    "kmYC":"Youth council Ksibet Mediouni",
+    "monastirYC":"Youth council Monastir",
+    "msakenYM":"Youth council Msaken",
+    "sousseYC":"Youth council Sousse",
     "coordinatorErriadh":"Aymen Hadj Farhat",
     "erriadhDescription":"The municipality of Riadh is located in the south of Sousse, it’s about 7Km far away from Sousse. Riadh is the second most populated municipality in Tunisia with more than 100000 habitants. The majority of them are young people and children.",
     "coordinatorErriadhDescription":"26 years old, a computer engineer.",
