add new partners pictures and add memebers for the team of hammam sousse

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -119,11 +119,11 @@
     "coordinatorMonastir":"Ranim Slimen",
     "monastirDescritpion":"Monastir est une ville côtière  du sahel tunisien, Son essor touristique est dû aux innombrables atouts de la ville et de sa zone. Monastir est l’ancienne Rous Penna punique que les Romains ont transformée en Ruspina. Elle a servi de point d'appui à la campagne africaine de César. Elle était protégée par 3 enceintes dont quelques traces subsistent encore. Après la conquête arabe, on y a construit, comme à Sousse et ailleurs, un ribat, forteresse tenue par une sorte de moines soldats. Les Turcs en ont fait à nouveau une place forte. Monastir est aujourd'hui une importante ville universitaire, les étudiants représentant un cinquième de la population.",
     "coordinatorMonastirDescription":"Ingénieur en informatique, passionné par la vie associative, j’apprécie particulièrement de devoir découvrir et maîtriser des nouvelles manières pour aimer la vie et connaitre des solutions innovantes qui nous aident à changer notre Tunisie vers le bien.",
-    "hsMember1":"",
-    "hsMember2":"",
-    "hsMember3":"",
-    "hsMember4":"",
-    "hsMember5":""
+    "hsMember1":"Meriam Ben Mustapha",
+    "hsMember2":"Hiba Kalbouzi",
+    "hsMember3":"Naiim Basli",
+    "hsMember4":"Hichem Hosny",
+    "hsMember5":"Nidhal Chemkhi"
   },
   "action":{
     "readyToJoin":"ARE YOU READY TO JOIN?",
