Add project calendar and fix some translation erros

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -96,7 +96,7 @@
         "kkYC": "XXXX",
         "kmYC": "XXXX",
         "monastirYC": "XXXX",
-        "msakenYM": "XXXX",
+        "msakenYC": "XXXX",
         "sousseYC": "XXXX",
         "coordinatorErriadh": "XXXX",
         "erriadhDescription": "XXXX",
@@ -113,18 +113,18 @@
         "coordinatorMsaken": "XXXX",
         "msakenDescription": "XXXX",
         "coordinatorMsakenDescription": "XXXX",
-        "coordinatorKM": "Aymen Ben Romdhane",
+        "coordinatorKM": "XXXXX",
         "kmDescription": "XXXX",
         "coordinatorKMDescription": "XXXX",
         "coordinatorMonastir": "XXXX",
         "monastirDescritpion": "XXXX",
         "coordinatorMonastirDescription": "XXXX",
         "msakenYC": "XXXXX",
-        "hsMember1": "",
-        "hsMember2": "",
-        "hsMember3": "",
-        "hsMember4": "",
-        "hsMember5": ""
+        "hsMember1": "XXXXX",
+        "hsMember2": "XXXXX",
+        "hsMember3": "XXXXX",
+        "hsMember4": "XXXXX",
+        "hsMember5": "XXXXX"
     },
     "action": {
         "readyToJoin": "XXXX",
