--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -96,7 +96,7 @@
     "kkYC":"Youth council Kalaa Kebira",
     "kmYC":"Youth council Ksibet Mediouni",
     "monastirYC":"Youth council Monastir",
-    "msakenYM":"Youth council Msaken",
+    "msakenYC":"Youth council Msaken",
     "sousseYC":"Youth council Sousse",
     "coordinatorErriadh":"Aymen Hadj Farhat",
     "erriadhDescription":"The municipality of Riadh is located in the south of Sousse, it’s about 7Km far away from Sousse. Riadh is the second most populated municipality in Tunisia with more than 100000 habitants. The majority of them are young people and children.",
