Add mini projects description

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -35,6 +35,8 @@
         "download": "XXXX",
         "training2015": "XXXX",
         "trainingDescription": "XXXX",
+        "miniproject":"XXXX",
+        "miniprojectDescrip":"XXXX",
         "projectErriadh": "XXXX",
         "projectKK": "XXXX",
         "projectHS": "XXXX",
