Add youth council msaken projects

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -51,8 +51,13 @@
         "monastir": "XXXX",
         "msaken": "XXXX",
         "sousse": "XXXX",
+        "studyTrip": "XXXX",
         "finalConference":"XXXX",
-        "conferenceDescrip":"XXXX"
+        "conferenceDescrip":"XXXX",
+        "atiniAidi":"XXXX",
+        "fitnessCreed":"XXXX",
+        "forumOrientation":"XXXX",
+        "dream":"XXXX"
     },
     "youthcouncil2013": {
         "pfblockTitle": "XXXX",
