--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -17,9 +17,10 @@
         "arabe": "XXXX",
         "french": "XXXX",
         "english": "XXXX",
-        "test": "XXXX"
+        "test": "XXXX",
+        "previous_editions": "XXXX"
     },
-    "youthcouncil2015": {
+    "youthcouncil2016": {
         "pfblockTitle": "XXXX",
         "pfblockSubtitle": "XXXX",
         "iconboxDesc1": "XXXX",
@@ -58,6 +59,37 @@
         "fitnessCreed":"XXXX",
         "forumOrientation":"XXXX",
         "dream":"XXXX"
+    },
+    "youthcouncil2015": {
+        "pfblockTitle": "XXXX",
+        "pfblockSubtitle": "XXXX",
+        "figCaptionTitle11": "XXXX",
+        "figCaptionTitle12": "XXXX",
+        "figCaptionDescription1": "XXXX",
+        "figCaptionTitle21": "XXXX",
+        "figCaptionTitle22": "XXXX",
+        "figCaptionDescription2": "XXXX",
+        "figCaptionTitle31": "XXXX",
+        "figCaptionTitle32": "XXXX",
+        "figCaptionDescription3": "XXXX",
+        "figCaptionTitle41": "XXXX",
+        "figCaptionTitle42": "XXXX",
+        "figCaptionDescription4": "XXXX",
+        "figCaptionTitle51": "XXXX",
+        "figCaptionTitle52": "XXXX",
+        "figCaptionDescription5": "XXXX",
+        "figCaptionTitle61": "XXXX",
+        "figCaptionTitle62": "XXXX",
+        "figCaptionDescription6": "XXXX",
+        "training2013": "XXXX",
+        "artCompetition": "XXXX",
+        "projects": "XXXX",
+        "studyTrip": "XXXX",
+        "guideBook": "XXXX",
+        "guideBookDescription": "XXXX",
+        "firtEdition": "XXXX",
+        "secondEdition": "XXXX",
+        "thirdEdition": "XXXX"
     },
     "youthcouncil2013": {
         "pfblockTitle": "XXXX",
